full-moon/tests/cases/fail/parser/call-4/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/call-4
---
error[ast]: unexpected token `(`. ( (expected `)` to close function call)
  ┌─ source.lua:1:5
  │
1 │ call(end)
  │     ^

error[ast]: unexpected token `end`. end (unexpected token, this needs to be a statement)
  ┌─ source.lua:1:6
  │
1 │ call(end)
  │      ^^^


